Update html to include player and game scripts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </section>
 </body>
 <script src="./src/main.js"></script>
-<script src="./src/player.js"></script>
+<script src="./src/game.js"></script>
 <script src="./src/player.js"></script>
 
 </html>
