Update to layout styling, add win count

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 <body>
   <section class="players">
-    <p>Player 1</p>
-    <article class="display-wins"></article>
+    <p>🦜 Wins</p>
+    <article class="display-wins">
+      <p class="wins">0</p>
+    </article>
   </section>
   <section class="center">
-    <h1>It's Player 1's turn</h1>
+    <h1>It's 🦜's turn</h1>
     <article class="gameboard">
       <div class="grid">
         <article class="box top left" id="0"></article>
@@ -30,8 +32,10 @@
     </article>
   </section>
   <section class="players">
-    <p>Player 2</p>
-    <article class="display-wins"></article>
+    <p> 🌺 Wins</p>
+    <article class="display-wins">
+      <p class="wins">0</p>
+      </article>
   </section>
 </body>
 <script src="./src/player.js"></script>
