Edit win display headers

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="players">
     <p>🦜 Wins</p>
     <article class="display-wins">
-      <p class="wins">0</p>
+      <p class="one-wins">0</p>
     </article>
   </section>
   <section class="center">
@@ -34,8 +34,8 @@
   <section class="players">
     <p> 🌺 Wins</p>
     <article class="display-wins">
-      <p class="wins">0</p>
-      </article>
+      <p class="two-wins">0</p>
+    </article>
   </section>
 </body>
 <script src="./src/player.js"></script>
