Add reset game button

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <article class="display-wins">
       <p class="wins" id="two-wins">0</p>
     </article>
+    <button class="btns" id="reset">Reset Game</button>
   </section>
 </body>
 <script src="./src/player.js"></script>
