Update syntax and indentations

--- a/index.html
+++ b/index.html
@@ -8,55 +8,56 @@
 </head>
 <body>
   <div class="game-page" id="main-page">
-  <section class="players">
-    <p class="player-wins" aria-label="Green and red parrot emoji">🦜 Wins</p>
-    <article class="display-wins">
-      <p class="player-wins wins" id="one-wins">0</p>
-    </article>
-    <button class="btns" id="facts">Why Rainforests?</button>
-  </section>
-  <section class="center">
-    <div class="gameplay-display">
-      <h1 id="player">
-        It's 🦜's turn
-      </h1>
-      <h2 class="hidden" id="winner">
-        Winner announcement will be displayed here.
-      </h2>
-    </div>
-    <article class="gameboard">
-      <div class="grid" id="game-grid">
-        <div class="box top left" id="0"></div>
-        <div class="box top" id="1"></div>
-        <div class="box top right" id="2"></div>
-        <div class="box left" id="3"></div>
-        <div class="box" id="4"></div>
-        <div class="box right" id="5"></div>
-        <div class="box bottom left" id="6"></div>
-        <div class="box bottom" id="7"></div>
-        <div class="box bottom right" id="8"></div>
+    <section class="players">
+      <p class="player-wins" aria-label="Green and red parrot emoji"> 🦜 Wins</p>
+      <article class="display-wins">
+        <p class="player-wins wins" id="one-wins">0</p>
+      </article>
+      <button class="btns" id="facts">Why Rainforests?</button>
+    </section>
+    <section class="center">
+      <div class="gameplay-display">
+        <h1 id="player">
+          It's 🦜's turn
+        </h1>
+        <h2 class="hidden" id="winner">
+          Winner announcement will be displayed here.
+        </h2>
       </div>
-    </article>
-  </section>
-  <section class="players">
-    <p class="player-wins" aria-label="Pink tropical flower emoji"> 🌺 Wins</p>
-    <article class="display-wins">
-      <p class="player-wins wins" id="two-wins">0</p>
-    </article>
-    <button class="btns" id="reset">Reset Game</button>
-  </section>
+      <article class="gameboard">
+        <div class="grid" id="game-grid">
+          <div class="box top left" id="0"></div>
+          <div class="box top" id="1"></div>
+          <div class="box top right" id="2"></div>
+          <div class="box left" id="3"></div>
+          <div class="box" id="4"></div>
+          <div class="box right" id="5"></div>
+          <div class="box bottom left" id="6"></div>
+          <div class="box bottom" id="7"></div>
+          <div class="box bottom right" id="8"></div>
+        </div>
+      </article>
+    </section>
+    <section class="players">
+      <p class="player-wins" aria-label="Pink tropical flower emoji"> 🌺 Wins</p>
+      <article class="display-wins">
+        <p class="player-wins wins" id="two-wins">0</p>
+      </article>
+      <button class="btns" id="reset">Reset Game</button>
+    </section>
   </div>
   <section class="rainforest-facts hidden" id="facts-page">
     <article class="facts">
       <h2 class="facts-para facts-head">THE IMPORTANCE OF RAINFORESTS</h2>
-      <p class="facts-para">Rainforests are one of the most bio-diverse regions in the world, and are essential to the balance of life on Earth.
-      </p>
-      <p class="facts-para">"Not only do they provide air, water, medicine, food, and shelter to a multitude of living beings, they are also one of our best natural defenses against climate change because of their capacity to absorb greenhouse gases from the atmosphere."
-        <a href="https://www.rainforest-alliance.org/pictures/9-rainforest-facts-everyone-should-know" target="_blank"><sup>1</sup></a>
-      </p>
-      <p class="facts-para">
+        <p class="facts-para">Rainforests are one of the most bio-diverse regions in the world, and are essential to the balance of life on Earth.
+        </p>
+        <p class="facts-para">"Not only do they provide air, water, medicine, food, and shelter to a multitude of living beings, they are also one of our best natural defenses against climate change because of their capacity to absorb greenhouse gases
+        from the atmosphere."
+          <a href="https://www.rainforest-alliance.org/pictures/9-rainforest-facts-everyone-should-know" target="_blank"><sup>1</sup></a>
+        </p>
+        <p class="facts-para">
         The world's rainforests are indespensible. You can do your part by supporting organizations and products that promote rainforest preservation and sustainability.
-      </p>
+        </p>
     </article>
     <button class="btns main-btn" id="main">Back to Game</button>
   </section>
